2005-12-08  Dariush Molavi  <dari@nukedgallery.net> 0.4.0
	* New: Update checks performed when setting up the integration package, 
	  and when admin user visits integrated installation.  This lets the admin 
	  know if there is an update to the integration package that they should download.
	* New: Integration config info is now stored in the phpnuke database, old 
	  gallery2.cfg file has been removed.
	* Fix: Blank popup issues have been resolved (thanks to Vermithrax for helping 
	  debug and fix).
	* Fix: Progress bar on the user export now works in IE and FF (thanks to Vermithrax 
	  for helping debug and fix).
	* Fix: Solved re-declaration errors.  Added note in the Readme file for users of 
	  old/new versions of PHPNuke and what they need to do to avoid the error. 

2005-12-07  Dariush Molavi  <dari@nukedgallery.net> 0.3.5
	* New: Added version info to ChangeLog. This paves the way for the 
	  automatic update check which will hopefully make it into the next 
 	  release package.

2005-12-05  Dariush Molavi  <dari@nukedgallery.net> 0.3.4
	* Fix: TinyMCE editor in new versions of phpNuke conflicted w/ the 
	  textareas in G2.  Added code to remove call to TinyMCE js files 
	  when in G2 pages.

2005-12-05  Dariush Molavi  <dari@nukedgallery.net> 0.3.3
	* Fix: Hmm, removing old code broke more than it fixed. Re-added 
	  problem code and *really* fixed it this time.

2005-11-28  Dariush Molavi  <dari@nukedgallery.net> 0.3.2
	* Update: Notice in Readme regarding rewrite module in 
	  integrated installations.
	* Fix: Removed outdated function references in 
	  modules/gallery2/admin/index.php

2005-11-21  Dariush Molavi  <dari@nukedgallery.net> 0.3.1
	* Fix: Oops, deleted the init() function wrapper from 
	  modules/gallery2/admin/index.php.  Re-added.

2005-11-16  Dariush Molavi  <dari@nukedgallery.net> 0.3.0
	* New: New popup window when exporting PHPNuke users
	  to Gallery 2.  Displays a progress bar to show how 